<resources>
    <string name="app_name" translatable="false">Vaccination</string>
    <string name="sign_in_label">Sign in</string>
    <string name="register_label">Register</string>
    <string name="enter_email_label">Enter email</string>
    <string name="enter_password_label">Enter password</string>
    <string name="protect_your_health" translatable="false">protect your health</string>
    <string name="enter_name_label">Enter name</string>
    <string name="sex_label">Sex:</string>
    <string name="male_label">male</string>
    <string name="female_label">female</string>
    <string name="enter_age_label">Enter age</string>
    <string name="chronic_diseases_label">Chronic diseases:</string>
    <string name="yes_label">yes</string>
    <string name="no_label">no</string>
    <string name="bad_habits_label">Bad habits:</string>
    <string name="self_protection_label">Self protection measures:</string>
    <string name="sometimes_label">sometimes</string>
    <string name="vaccine_label">Vaccine:</string>
    <string name="choosing_first_date_label">Date of the first vaccination</string>
    <string name="choose_date_label">Choose date</string>
    <string name="choosing_second_date_label">Date of the second vaccination</string>
    <string name="place_of_life_label">Place of life:</string>
    <string name="metropolis_label">metropolis</string>
    <string name="city_label">city</string>
    <string name="village_label">village</string>
    <string name="confirm_password_label">Enter password (confirmation)</string>
    <string name="submit_label">Submit</string>
    <string name="unaviable_label">Unaviable</string>
    <string name="failed_to_login_label">Failed to login</string>
    <string name="age_label">Age:</string>
    <string name="none_label">none</string>
    <string name="settings_label">Settings</string>
    <string name="first_date_label">First date:</string>
    <string name="second_date_label">Second date:</string>
    <string name="revaccination_label">Revaccination:</string>
    <string name="profile_label">Profile</string>
    <string name="news_label">News</string>
    <string name="delete_profile_image_label">Delete profile image</string>
    <string name="edit_profile_label">Edit profile</string>
    <string name="sign_out_label">Sign out</string>
    <string name="delete_profile_label">Delete account</string>
    <string name="failed_to_save_data_label">Failed to save data</string>
    <string name="passwords_mismatch_label">Passwords mismatch</string>
    <string name="enter_first_date_label">Enter the first date</string>
    <string name="enter_second_date_label">Enter the second date</string>
    <string name="no_image_for_delete_label">There is not image for delete</string>
    <string name="loading">Loading...</string>
    <string name="contact_support_label">Support</string>
    <string name="invalid_date_selected_label">Invalid date selected!</string>
    <string name="failed_to_load_data">Failed to load data!</string>
</resources>