<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizationActivity"
    android:id="@+id/authoization_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_signin_field"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/text_prothealth"
                android:layout_marginStart="10sp"
                android:layout_marginTop="76sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/enter_email_label"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_signin_field"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/email_signin_field"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/enter_password_label"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textSize="20sp" />

            <Button
                android:id="@+id/registration_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signin_button"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="5sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:layout_toEndOf="@id/split_auth_buttons"
                android:background="@color/purple_200"
                android:fontFamily="@font/ubuntu"
                android:text="@string/register_label"
                android:textColor="@color/white" />

            <View
                android:id="@+id/split_auth_buttons"
                android:layout_width="1sp"
                android:layout_height="44sp"
                android:layout_below="@id/signin_button"
                android:layout_centerInParent="true"
                android:layout_marginTop="13sp"
                android:background="@color/gray" />

            <Button
                android:id="@+id/contact_support_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signin_button"
                android:layout_centerVertical="true"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="5sp"
                android:layout_marginBottom="10sp"
                android:layout_toLeftOf="@id/split_auth_buttons"
                android:background="@color/purple_200"
                android:fontFamily="@font/ubuntu"
                android:text="@string/contact_support_label"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/signin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_signin_field"
                android:layout_marginHorizontal="10sp"
                android:background="@color/purple_200"
                android:fontFamily="@font/ubuntu"
                android:text="@string/sign_in_label"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/text_vaccination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="165sp"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_prothealth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_vaccination"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/protect_your_health"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>



    </ScrollView>

</RelativeLayout>