<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/account_image_view"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20sp"
                android:contentDescription="@string/profile_label" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/loading_animation"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90sp"
                android:src="@drawable/loading" />

            <TextView
                android:id="@+id/name_profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/ubuntu_mono"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_profile_text"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20sp"
                android:fontFamily="@font/ubuntu_mono"
                android:textAlignment="center"
                android:textSize="25sp" />
            <View
                android:id="@+id/line"
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:layout_below="@id/email_profile_text"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/liner_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_mono"
                    android:text="@string/sex_label"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sex_profile_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:fontFamily="@font/ubuntu_mono"
                    android:textSize="22sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/liner_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20sp"
                android:layout_below="@id/liner_sex">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_mono"
                    android:text="@string/age_label"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/age_profile_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:fontFamily="@font/ubuntu_mono"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_vaccine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/liner_age"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_mono"
                    android:text="@string/vaccine_label"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vaccine_profile_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:fontFamily="@font/ubuntu_mono"
                    android:textSize="22sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/liner_first_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20sp"
                android:layout_below="@id/liner_vaccine">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_mono"
                    android:text="@string/first_date_label"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/first_date_profile_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:fontFamily="@font/ubuntu_mono"
                    android:textSize="22sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/liner_second_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20sp"
                android:layout_below="@id/liner_first_date">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_mono"
                    android:text="@string/second_date_label"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/second_date_profile_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:fontFamily="@font/ubuntu_mono"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20sp"
                android:layout_below="@id/liner_second_date">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_mono"
                    android:text="@string/revaccination_label"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/revactination_profile_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:fontFamily="@font/ubuntu_mono"
                    android:textSize="22sp" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>